# ChangeLog for net-im/gizmo
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jul 2007; David Shakaryan <omp@gentoo.org> gizmo-3.0.1.68.ebuild:
  Use $P in SRC_URI.

  11 May 2007; Stefan Schweizer <genstef@gentoo.org> -gizmo-3.0.0.67.ebuild,
  +gizmo-3.0.1.68.ebuild:
  version bump

  09 May 2007; Stefan Schweizer <genstef@gentoo.org> -gizmo-3.0.0.66.ebuild,
  +gizmo-3.0.0.67.ebuild:
  version bump thanks to Coran

  08 Apr 2007; Stefan Schweizer <genstef@gentoo.org> -gizmo-1.1.0.40.ebuild,
  +gizmo-3.0.0.66.ebuild:
  version bump

  05 Apr 2007; Jakub Moc <jakub@gentoo.org> gizmo-1.1.0.40.ebuild:
  Fix desktop entry

  26 Dec 2006; Markus Ullmann <jokey@gentoo.org> -gizmo-1.1.0.39.ebuild,
  +gizmo-1.1.0.40.ebuild:
  Version bump

  04 Oct 2006; Stefan Schweizer <genstef@gentoo.org> -gizmo-1.0.0.18.ebuild,
  +gizmo-1.1.0.39.ebuild:
  version bump

  10 Sep 2006; Jakub Moc <jakub@gentoo.org> gizmo-1.0.0.18.ebuild:
  Monolithic X is not supported any more

  21 Aug 2006; Stefan Schweizer <genstef@gentoo.org> gizmo-1.0.0.18.ebuild:
  fix unpack thanks to mrfreeze in #gentoo-sunrise

  10 Aug 2006; Jakub Moc <jakub@gentoo.org> gizmo-1.0.0.18.ebuild:
  fix curl dependency

  18 Jun 2006; Gustavo Felisberto <humpback@gentoo.org>; ChangeLog:
  Removed amd64 deps as they do not cover all that is needed and the amd64
  team is not going to fix this. One should pester upstream and ask for a 64
  bits package.

  18 Jun 2006; Stefan Schweizer <genstef@gentoo.org> +gizmo-1.0.0.18.ebuild:
  New ebuild by me with help from bug 103587
