@@ -1,4 +1,6 @@
 DIST gizmo-project-3.0.1.68.tar.gz 10157582 RMD160 2c95731c7148ae455f65f1043d68937a7bfc8160 SHA1 1f4a3992644c5725c0f156b5a68736d0f8eb040c SHA256 66f0e41fff945b566e0d64635a95b30b0e11b46535fa9285574a1562095fb4dd
+DIST gizmo-project-3.1.0.79-1-libstdc++6.tar.gz 10680285 RMD160 1fc12c4126174e57fde7d25377e314e1a6fb8a28 SHA1 e7f0c172d3870f1146d685af047743ad4e64e960 SHA256 fdd8aef776eaf4ce52846ccc448468e8d5122ae4c36ba9c007b2d1a0180cf7d5
 EBUILD gizmo-3.0.1.68.ebuild 982 RMD160 ba36a9a14043f27197e461f04a16e16cf7c649fe SHA1 313215b5db489bf5e48d34b71956ecb7ae2891aa SHA256 d8c06b36aadf69a96ac9476b17451dd7f784d94467bc09381900a6d9073a869e
-MISC ChangeLog 1588 RMD160 d751f9fb5281dde404a75f8a32a1b821561dc796 SHA1 3e225609cda8f8217d8530e6372170448e41f759 SHA256 fb2e5f3ad6a874bae7fbba46f7f4d128141f72c8d0544eb8ea37bc167590e65d
+EBUILD gizmo-3.1.0.79.ebuild 995 RMD160 7b44a59bb6a6c8bb534341139a4c5e2d7e539fd9 SHA1 1e06619c521941fd5a9afffaeb4fabdae272d2fb SHA256 7045a4caa4eac32d984c1401dcef65b0c31fcb5b0ee8575283e2b2052b563b3b
+MISC ChangeLog 1711 RMD160 2489fe6fcdb2c5c461b1f828891d226c92f6955f SHA1 f25f0139cfd7398713d82416b6e0270cae41029d SHA256 5a8c5e081988df9674ab1a9f8d70b20a89716c7c2ee1a7fe732b5e64fb73478c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
